tests/baselines/reference/moduleClassArrayCodeGenTest.errors.txt
moduleClassArrayCodeGenTest.ts(10,11): error TS2694: Namespace 'M' has no exported member 'B'.


==== moduleClassArrayCodeGenTest.ts (1 errors) ====
    // Invalid code gen for Array of Module class
    
    module M
    {
        export class A { }
        class B{ }
    }
    
    var t: M.A[] = [];
    var t2: M.B[] = [];
              ~
!!! error TS2694: Namespace 'M' has no exported member 'B'.